--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@angular/common/http": "^15.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.17",
@@ -44,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "@angular/common/http": "^15.0.0"
   }
 }
